# Highz-EXP

./: .gitignore  Pipfile  README.md  helper.py  pyproject.toml  requirements.txt  setup.py
LocalOscillator/LO_Manual_Controller/: LO_Manual_Controller.ino
LocalOscillator/local_oscillator_controller/: local_oscillator_controller.ino
docs/: FILTERBANK_CONSOLIDATION.md
notebooks/: README.md  Y_factor.ipynb  amplifier_measurements.ipynb  ant2_analysis.ipynb  ant_match.ipynb  calibrator_measurements copy.ipynb  calibrator_measurements.ipynb  data_pipeline.ipynb  feko_visuals.ipynb  multiple_reflection_model.ipynb  pygsm_analysis.ipynb  soil_impedance.ipynb  sparam_demo.ipynb  system_calibration.ipynb  visualize_npy.ipynb
scripts/: ALL_ON_BOOT.sh  README.md  highz_alias.sh
src/digital_spectrometer/: file_compressor.py  image_creator.py  io_utils.py  launcher.sh  movie_creator.py  params.py  plot_settings.py  rcal.py  run_spectrometer.py  sys_cal.py  viewspec_now.py  waterfall_interactive.py  waterfall_plotter.py  waterfall_static.py  waterfall_utils.py
src/filterbank/: __init__.py
src/highz-exp/: reflection_proc.py  unit_convert.py
src/highz_exp/: __init__.py  argparse_utils.py  circuit_model.py  feko_utils.py  file_load.py  filter_plotting.py  filterbank.py  fit_model.py  fit_temperature.py  load_csv.py  load_db.py  load_trc.py  noise_param.py  plotter.py  s_params.py  (+7 more)
tools/: CAL_VARS.py  README.md  ds_cal_wf.py  ds_wf_maker.py  ds_zipper.py  fb_cal_wf.py  fb_inspector.py  fb_wf_maker.py  historical_viewer.py  interactive_inspector.py  sky_T_simulator.py
(+6 files in other folders)
