[project]
name = "highz-exp"
version = "0.1.0"
description = "A Python project for Highz-EXP"
authors = [
    { name="high-z-team", email="highZteam@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    # Add your runtime dependencies here, e.g.:
    "numpy",
    "astropy",
    "scipy",
    "matplotlib",
    "skrf"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"